--- a/package.json
+++ b/package.json
@@ -1,38 +1,77 @@
 {
-  "name": "my-react-template",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "my-react-template",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@craco/craco": "^6.1.1",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/node": "^14.14.31",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
+        "@types/react-redux": "^7.1.16",
+        "@types/react-router-dom": "^5.1.7",
+        "antd": "^4.13.0",
+        "axios": "^0.21.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "sass": "^1.32.8",
+        "typescript": "^4.2.2",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build:dev": "REACT_APP_ENV=DEV craco build",
+        "build:test": "REACT_APP_ENV=TEST craco build",
+        "build:prod": "REACT_APP_ENV=PROD craco build",
+        "build": "npm run build:prod",
+        "test": "craco test",
+        "eject": "react-scripts eject",
+        "watch": "cra-build-watch -b ./static",
+        "prettier": "prettier --write ."
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "plugin:prettier/recommended"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "babel-plugin-import": "^1.13.3",
+        "cra-build-watch": "^3.4.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "http-proxy-middleware": "^1.0.6",
+        "husky": "^5.1.2",
+        "lint-staged": "^10.5.4",
+        "prettier": "^2.2.1"
+    },
+    "husky": {
+
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+
+        "*.{js,jsx,d.ts,tsx,json,css,less}": [
+            "prettier --write",
+            "eslint --fix"
+        ]
+    }
 }
